# fortran-workshop

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  fpm.toml  runner.txt  valgrind_ifx.supp
.github/workflows/: test.yml
app/: CMakeLists.txt  functional_performance.f90  hello_world_demo.f90  integration_demo.f90  logging_demo.f90  memory_leaks.f90  performance_demo.f90  rainfall_runoff_demo.f90  ray_optics_demo.f90  timer_linked_list_demo.f90  timer_list_demo.f90
cmake/: python_dependencies.cmake
data/: rainfall_runoff_demo_input.csv
docker/fpm/: Dockerfile
docs/: README-VS-Code-CMake.md  README-VS-Code-FPM.md  README-VS-Code.md  README-Visual-Studio.md  VS-Code-Fortran-Debugging.md  VS-Code-Modern-Fortran.md
src/: CMakeLists.txt  damped_oscillator.f90  filter_map_reduce.f90  hello_world.f90  integration.f90  logging.f90  stopwatch.f90  vector.f90
src/benchmark/: diagnostics.f90  facade.f90  mem_usage.c  memory.f90
src/common/: CMakeLists.txt  clock.f90  command_line.f90  error_handling.f90  interpolation.f90  m_command_line.f90  precision.f90  random.f90  strings.f90  time.f90  to_string.f90
src/config/: loading.f90
src/file/: operations.f90  reader.f90  writer.f90
src/functional/: examples.f90  lists.f90
src/geometry/: point.f90  polygon.f90  polyline.f90
src/hello_world_app/hello_world_lib/: m_hello_world.f90
src/hydraulic_structures/: pump.f90
src/hydrology/: input.f90  mediator.f90  observer.f90  output.f90  rainfall_runoff.f90  simulation_state.f90
src/integration/: damped_oscillator.f90  trapezoid.f90
src/logging/: abstract.f90  aggregation.f90  everything.f90  facade.f90  facade_implementation.f90  file.f90  stdout.f90  timestamp.f90
src/logging_demo/: main.f90
src/logging_demo/logging/: CMakeLists.txt  m_logging.f90
src/ray_optics/: intersection_and_reflection.f90  library.f90  vector_2d.f90
src/stopwatch/: facade.f90  facade_implementation.f90  timer.f90  timer_linked_list.f90  timer_list.f90
src/stopwatch_tdd/: facade.f90
src/vector/: m_vector.f90
test/: main.f90  test_benchmark.f90  test_check_pump_specification.f90  test_clock.f90  test_config.f90  test_custom_checks.f90  test_error_handling.f90  test_file_reader.f90  test_file_writer.f90  test_filter_map_reduce.f90  test_geometry.f90  test_hello_world.f90  test_integration.f90  test_interpolation.f90  test_pump.f90  test_rainfall_runoff.f90  test_random.f90  test_ray_optics.f90  test_stopwatch.f90  test_strings.f90  test_to_string.f90  test_vector.f90  test_vector_lib.f90
